# rust-fundamentals

./: Cargo.toml  README.md  geo.rs  main.rs
03-data-types/: main.rs
06-control-flow/: main.rs
07-ownership-and-borrowing/: README.md  main.rs
08-functions-and-error-handling/: main.rs
09-data-structures-and-traits/: main.rs
10-collections/: main.rs
11-generics/: main.rs
12-concurrency/: README.md  main.rs
13-crates-and-modules/: README.md
