[package]
name = "rust-fundamentals"
version = "0.1.0"
edition = "2021"
description = "Pluralsight demo project"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[[bin]]
name = "rust-fundamentals"
path = "main.rs"
